// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Theme Colors (palette) 1`] = `
Array [
  <h1>
    ⚠️ Internal object, use colors (semantic)
  </h1>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        brandBlue
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 bvSLOI"
          color="#00C8F5"
        />
        <div>
          #00C8F5
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        brandGreen
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kfsTJZ"
          color="#D2F500"
        />
        <div>
          #D2F500
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        brandPink
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kwUHSH"
          color="#FF2B83"
        />
        <div>
          #FF2B83
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        brandTurquoise
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 hYdGsW"
          color="#00F0E1"
        />
        <div>
          #00F0E1
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        complementaryBlue1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 inaXZW"
          color="#385E9D"
        />
        <div>
          #385E9D
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        complementaryBlue2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 jKAvQf"
          color="#131F4F"
        />
        <div>
          #131F4F
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        complementaryGreen1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        complementaryGreen2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 krPrhS"
          color="#023C00"
        />
        <div>
          #023C00
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        complementaryPink1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 ftqrHQ"
          color="#AC135A"
        />
        <div>
          #AC135A
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        complementaryPink2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kTYrkU"
          color="#78013A"
        />
        <div>
          #78013A
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        complementaryTurquoise1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 PkofA"
          color="#009195"
        />
        <div>
          #009195
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        complementaryTurquoise2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 khxDFU"
          color="#01424C"
        />
        <div>
          #01424C
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        black
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 cfyNTM"
          color="#000000"
        />
        <div>
          #000000
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        gray0
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 ldgEzN"
          color="#282823"
        />
        <div>
          #282823
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        gray1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 ehXLju"
          color="#4B4B46"
        />
        <div>
          #4B4B46
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        gray2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 fHbKYT"
          color="#6E6E69"
        />
        <div>
          #6E6E69
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        gray3
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 fquUQz"
          color="#A0A09B"
        />
        <div>
          #A0A09B
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        gray4
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 luMaU"
          color="#BCBCB6"
        />
        <div>
          #BCBCB6
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        gray5
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 ctNWCC"
          color="#D7D7D2"
        />
        <div>
          #D7D7D2
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        gray6
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        gray7
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 fcPaWP"
          color="#F5F5F5"
        />
        <div>
          #F5F5F5
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        white
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        cta
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 iDOsLu"
          color="#0046FF"
        />
        <div>
          #0046FF
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        positive
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 eTmQfO"
          color="#00D200"
        />
        <div>
          #00D200
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        negative
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kyfYZw"
          color="#FF1900"
        />
        <div>
          #FF1900
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        index
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        a11yCta
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 fIqrpr"
          color="#2D67FF"
        />
        <div>
          #2D67FF
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        a11yPositive
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 gQpRVN"
          color="#008A00"
        />
        <div>
          #008A00
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        a11yNegative
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 OHAYz"
          color="#E81700"
        />
        <div>
          #E81700
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        a11yIndex
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 iyMJAs"
          color="#C15700"
        />
        <div>
          #C15700
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Theme Colors (semantic) 1`] = `
<table
  className="Table__StyledTable-vgcwcw-0 gApnzk"
  width="100%"
>
  <thead
    className="Thead__StyledThead-ck14n6-0 kAQXLs"
  >
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <th
        className="Th__StyledTh-sc-1p4dh6v-0 fYKpSm"
        width="auto"
      >
        Name
      </th>
      <th
        className="Th__StyledTh-sc-1p4dh6v-0 fYKpSm"
        width="auto"
      >
        Default
      </th>
      <th
        className="Th__StyledTh-sc-1p4dh6v-0 fYKpSm"
        width="auto"
      >
        A11y
      </th>
    </tr>
  </thead>
  <tbody
    className="Tbody__StyledTbody-sc-1d56nd1-0 fNzYDP"
  >
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        backgroundInput
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        background
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fcPaWP"
          color="#F5F5F5"
        />
        <div>
          #F5F5F5
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fcPaWP"
          color="#F5F5F5"
        />
        <div>
          #F5F5F5
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        backgroundBlack
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 cfyNTM"
          color="#000000"
        />
        <div>
          #000000
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 cfyNTM"
          color="#000000"
        />
        <div>
          #000000
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        backgroundDark
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ldgEzN"
          color="#282823"
        />
        <div>
          #282823
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ldgEzN"
          color="#282823"
        />
        <div>
          #282823
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        bubbleBackground
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        bubbleBorder
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 luMaU"
          color="#BCBCB6"
        />
        <div>
          #BCBCB6
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 luMaU"
          color="#BCBCB6"
        />
        <div>
          #BCBCB6
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        buttonSecondaryBackground
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        buttonText
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        buy
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iDOsLu"
          color="#0046FF"
        />
        <div>
          #0046FF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fIqrpr"
          color="#2D67FF"
        />
        <div>
          #2D67FF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        buyActive
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ebTpsy"
          color="hsl(223.5, 100%, 35%)"
        />
        <div>
          hsl(223.5, 100%, 35%)
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 dgntCr"
          color="hsl(223.39999999999998, 100%, 41.2%)"
        />
        <div>
          hsl(223.39999999999998, 100%, 41.2%)
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        borderActive
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iDOsLu"
          color="#0046FF"
        />
        <div>
          #0046FF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fIqrpr"
          color="#2D67FF"
        />
        <div>
          #2D67FF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        card
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        cta
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iDOsLu"
          color="#0046FF"
        />
        <div>
          #0046FF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fIqrpr"
          color="#2D67FF"
        />
        <div>
          #2D67FF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        creditsPiePrimary
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ftqrHQ"
          color="#AC135A"
        />
        <div>
          #AC135A
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ftqrHQ"
          color="#AC135A"
        />
        <div>
          #AC135A
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        creditsPieSecondary
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kTYrkU"
          color="#78013A"
        />
        <div>
          #78013A
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kTYrkU"
          color="#78013A"
        />
        <div>
          #78013A
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        disabled
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fquUQz"
          color="#A0A09B"
        />
        <div>
          #A0A09B
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fquUQz"
          color="#A0A09B"
        />
        <div>
          #A0A09B
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        disabledText
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fquUQz"
          color="#A0A09B"
        />
        <div>
          #A0A09B
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fquUQz"
          color="#A0A09B"
        />
        <div>
          #A0A09B
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        disabledBackground
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        divider
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        label
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fHbKYT"
          color="#6E6E69"
        />
        <div>
          #6E6E69
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fHbKYT"
          color="#6E6E69"
        />
        <div>
          #6E6E69
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        selectOptionBackground
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        menuAccent1
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kfsTJZ"
          color="#D2F500"
        />
        <div>
          #D2F500
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kfsTJZ"
          color="#D2F500"
        />
        <div>
          #D2F500
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        menuAccent2
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hYdGsW"
          color="#00F0E1"
        />
        <div>
          #00F0E1
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hYdGsW"
          color="#00F0E1"
        />
        <div>
          #00F0E1
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        menuAccent3
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        menuAccent4
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kwUHSH"
          color="#FF2B83"
        />
        <div>
          #FF2B83
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kwUHSH"
          color="#FF2B83"
        />
        <div>
          #FF2B83
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        menuAccent5
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bvSLOI"
          color="#00C8F5"
        />
        <div>
          #00C8F5
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bvSLOI"
          color="#00C8F5"
        />
        <div>
          #00C8F5
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        modalBackdrop
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 jdHcWn"
          color="rgba(110, 110, 105, 0.63)"
        />
        <div>
          rgba(110, 110, 105, 0.63)
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 jdHcWn"
          color="rgba(110, 110, 105, 0.63)"
        />
        <div>
          rgba(110, 110, 105, 0.63)
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        module
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        negative
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kyfYZw"
          color="#FF1900"
        />
        <div>
          #FF1900
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 OHAYz"
          color="#E81700"
        />
        <div>
          #E81700
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        positive
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 eTmQfO"
          color="#00D200"
        />
        <div>
          #00D200
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 gQpRVN"
          color="#008A00"
        />
        <div>
          #008A00
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        sell
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kyfYZw"
          color="#FF1900"
        />
        <div>
          #FF1900
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 OHAYz"
          color="#E81700"
        />
        <div>
          #E81700
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        sellActive
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 cMLmuR"
          color="hsl(5.899999999999977, 100%, 35%)"
        />
        <div>
          hsl(5.899999999999977, 100%, 35%)
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hSuhuP"
          color="hsl(5.899999999999977, 100%, 31.8%)"
        />
        <div>
          hsl(5.899999999999977, 100%, 31.8%)
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        shadowCard
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fDtgnR"
          color="rgba(0, 0, 0, 0.03)"
        />
        <div>
          rgba(0, 0, 0, 0.03)
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fDtgnR"
          color="rgba(0, 0, 0, 0.03)"
        />
        <div>
          rgba(0, 0, 0, 0.03)
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        shadowModal
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iRpnAZ"
          color="rgba(0, 0, 0, 0.16)"
        />
        <div>
          rgba(0, 0, 0, 0.16)
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iRpnAZ"
          color="rgba(0, 0, 0, 0.16)"
        />
        <div>
          rgba(0, 0, 0, 0.16)
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        shadowInput
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fDtgnR"
          color="rgba(0, 0, 0, 0.03)"
        />
        <div>
          rgba(0, 0, 0, 0.03)
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fDtgnR"
          color="rgba(0, 0, 0, 0.03)"
        />
        <div>
          rgba(0, 0, 0, 0.03)
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        shadowSwitch
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 cBdKPv"
          color="rgba(0, 0, 0, 0.05)"
        />
        <div>
          rgba(0, 0, 0, 0.05)
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 cBdKPv"
          color="rgba(0, 0, 0, 0.05)"
        />
        <div>
          rgba(0, 0, 0, 0.05)
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        shareville
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        skeleton
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        spinnerBlack
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 cfyNTM"
          color="#000000"
        />
        <div>
          #000000
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 cfyNTM"
          color="#000000"
        />
        <div>
          #000000
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        spinnerWhite
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        starRating
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        starRatingOff
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        streamingBolt
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        svgFill
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ldgEzN"
          color="#282823"
        />
        <div>
          #282823
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ldgEzN"
          color="#282823"
        />
        <div>
          #282823
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        svgStroke
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fHbKYT"
          color="#6E6E69"
        />
        <div>
          #6E6E69
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fHbKYT"
          color="#6E6E69"
        />
        <div>
          #6E6E69
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        svgStokeLight
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        text
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ldgEzN"
          color="#282823"
        />
        <div>
          #282823
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ldgEzN"
          color="#282823"
        />
        <div>
          #282823
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        textLight
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 hoENDM"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        warning
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iyMJAs"
          color="#C15700"
        />
        <div>
          #C15700
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        inputBorder
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 luMaU"
          color="#BCBCB6"
        />
        <div>
          #BCBCB6
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 luMaU"
          color="#BCBCB6"
        />
        <div>
          #BCBCB6
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        inputBorderHover
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ehXLju"
          color="#4B4B46"
        />
        <div>
          #4B4B46
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ehXLju"
          color="#4B4B46"
        />
        <div>
          #4B4B46
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        flagBorder
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        inputBorderError
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kyfYZw"
          color="#FF1900"
        />
        <div>
          #FF1900
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kyfYZw"
          color="#FF1900"
        />
        <div>
          #FF1900
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        inputBorderSuccess
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 eTmQfO"
          color="#00D200"
        />
        <div>
          #00D200
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 eTmQfO"
          color="#00D200"
        />
        <div>
          #00D200
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        generationSavingsTimelineColor1
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        generationSavingsTimelineColor2
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ftqrHQ"
          color="#AC135A"
        />
        <div>
          #AC135A
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ftqrHQ"
          color="#AC135A"
        />
        <div>
          #AC135A
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        generationSavingsTimelineColor3
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bvSLOI"
          color="#00C8F5"
        />
        <div>
          #00C8F5
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bvSLOI"
          color="#00C8F5"
        />
        <div>
          #00C8F5
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        generationSavingsTimelineColor4
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 inaXZW"
          color="#385E9D"
        />
        <div>
          #385E9D
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 inaXZW"
          color="#385E9D"
        />
        <div>
          #385E9D
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        orderDepthBackground
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 iLgySx"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        orderDepthDarkBackground
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ctNWCC"
          color="#D7D7D2"
        />
        <div>
          #D7D7D2
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ctNWCC"
          color="#D7D7D2"
        />
        <div>
          #D7D7D2
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        loanRatesGraphColor2
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 jKAvQf"
          color="#131F4F"
        />
        <div>
          #131F4F
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 jKAvQf"
          color="#131F4F"
        />
        <div>
          #131F4F
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        barChartColor1
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bvSLOI"
          color="#00C8F5"
        />
        <div>
          #00C8F5
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bvSLOI"
          color="#00C8F5"
        />
        <div>
          #00C8F5
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        barChartColor2
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 jKAvQf"
          color="#131F4F"
        />
        <div>
          #131F4F
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 jKAvQf"
          color="#131F4F"
        />
        <div>
          #131F4F
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        barChartColor3
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 inaXZW"
          color="#385E9D"
        />
        <div>
          #385E9D
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 inaXZW"
          color="#385E9D"
        />
        <div>
          #385E9D
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        barChartColor4
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        barChartColor5
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ftqrHQ"
          color="#AC135A"
        />
        <div>
          #AC135A
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 ftqrHQ"
          color="#AC135A"
        />
        <div>
          #AC135A
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        barChartColor6
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 fwBLJt"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        barChartColor7
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        columnChartColor1
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kfsTJZ"
          color="#D2F500"
        />
        <div>
          #D2F500
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kfsTJZ"
          color="#D2F500"
        />
        <div>
          #D2F500
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        columnChartColor2
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 krPrhS"
          color="#023C00"
        />
        <div>
          #023C00
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 krPrhS"
          color="#023C00"
        />
        <div>
          #023C00
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        columnChartColor3
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 bQeHvH"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        columnChartColor4
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 PkofA"
          color="#009195"
        />
        <div>
          #009195
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 PkofA"
          color="#009195"
        />
        <div>
          #009195
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        columnChartColor5
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 khxDFU"
          color="#01424C"
        />
        <div>
          #01424C
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 khxDFU"
          color="#01424C"
        />
        <div>
          #01424C
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        pieChartColor1
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kTYrkU"
          color="#78013A"
        />
        <div>
          #78013A
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kTYrkU"
          color="#78013A"
        />
        <div>
          #78013A
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        pieChartColor2
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kwUHSH"
          color="#FF2B83"
        />
        <div>
          #FF2B83
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 kwUHSH"
          color="#FF2B83"
        />
        <div>
          #FF2B83
        </div>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        pieChartColor3
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 luMaU"
          color="#BCBCB6"
        />
        <div>
          #BCBCB6
        </div>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <div
          className="Themestories__Color-skwibd-0 luMaU"
          color="#BCBCB6"
        />
        <div>
          #BCBCB6
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Theme Screen sizes 1`] = `
<table
  className="Table__StyledTable-vgcwcw-0 gApnzk"
  width="100%"
>
  <thead
    className="Thead__StyledThead-ck14n6-0 kAQXLs"
  >
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <th
        className="Th__StyledTh-sc-1p4dh6v-0 fYKpSm"
        width="auto"
      >
        Name
      </th>
      <th
        className="Th__StyledTh-sc-1p4dh6v-0 fYKpSm"
        width="auto"
      >
        Size
      </th>
      <th
        className="Th__StyledTh-sc-1p4dh6v-0 fYKpSm"
        width="auto"
      >
        Offset
      </th>
    </tr>
  </thead>
  <tbody
    className="Tbody__StyledTbody-sc-1d56nd1-0 fNzYDP"
  >
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        sm
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <pre>
          760
        </pre>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <pre>
          5
           units
        </pre>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        md
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <pre>
          976
        </pre>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <pre>
          5
           units
        </pre>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        lg
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <pre>
          1280
        </pre>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <pre>
          5
           units
        </pre>
      </td>
    </tr>
    <tr
      className="Tr__StyledTr-sc-1aap6l7-0 ddBema"
    >
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        xl
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <pre>
          1600
        </pre>
      </td>
      <td
        className="Td__StyledTd-sc-1r6yxrk-0 lkkgce"
      >
        <pre>
          5
           units
        </pre>
      </td>
    </tr>
  </tbody>
</table>
`;
